fix padding on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -135,3 +135,8 @@ canvas {
 #logo {
   font-size: 2em;
 }
+
+#main {
+  padding-left: 10px;
+  padding-right: 10px;
+}
